--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.0.7",
     "@angular/material": "^10.0.2",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "angular-bootstrap-md": "^9.3.1",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.16.1",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -47,5 +50,17 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 9.0.7.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jozshusz/productivera-website.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jozshusz/productivera-website/issues"
+  },
+  "homepage": "https://github.com/jozshusz/productivera-website#readme"
 }
