--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "angular-bootstrap-md": "^9.3.1",
     "bootstrap": "^4.5.0",
     "firebase": "^7.16.1",
