--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "^4.5.0",
     "firebase": "^7.16.1",
     "jquery": "^3.5.1",
+    "laravel-echo": "^1.8.1",
+    "pusher-js": "^7.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
