--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "angular-bootstrap-md": "^9.3.1",
     "bootstrap": "^4.5.0",
+    "country-json": "^1.1.0",
     "firebase": "^7.16.1",
     "jquery": "^3.5.1",
     "laravel-echo": "^1.8.1",
